erDiagram
    ALGORITHM {
        string name "Algorithm type"
    }

    access_token {
        UUID4 id PK "Primary Key"
        string key "API key value"
        ALGORITHM algorithm FK "Foreign Key to ALGORITHM"
        date expires_at "Expiration date"
        date created_at "Creation date"
        bool enabled "Token status"
    }

    environment {
        UUID4 id PK "Primary Key"
        UUID4 project_id FK "Foreign Key to PROJECT"
        string name "Environment name"
        string description "Environment description"
        bool enabled "Environment status"
        date created_at "Creation date"
        date updated_at "Last update date"
    }

    project {
        UUID4 id PK "Primary Key"
        string name "Project name"
        string description "Project description"
        bool enabled "Project status"
        date created_at "Creation date"
        date updated_at "Last update date"
    }

    project_access {
        UUID4 id PK "Primary Key"
        string name "Access name"
        UUID4 environment_id FK "Foreign Key to ENVIRONMENT"
        UUID4 service_account_id FK "Foreign Key to SERVICE_ACCOUNT"
        UUID4[] project_scopes FK "Foreign Keys to PROJECT_SCOPES"
        bool enabled "Access status"
        date created_at "Creation date"
        date updated_at "Last update date"
    }

    project_scopes {
        UUID4 id PK "Primary Key"
        UUID4 project_id FK "Foreign Key to PROJECT"
        string name "Scope name"
        string description "Scope description"
        bool enabled "Scope status"
        date created_at "Creation date"
        date updated_at "Last update date"
    }

    service_account {
        UUID4 id PK "Primary Key"
        string email "Account email"
        string user "Username"
        string secret "Account secret"
        bool enabled "Account status"
        date created_at "Creation date"
        date updated_at "Last update date"
    }

    service_account_keys {
        UUID4 id PK "Primary Key"
        UUID4 service_account_id FK "Foreign Key to SERVICE_ACCOUNT"
        ALGORITHM algorithm FK "Foreign Key to ALGORITHM"
        string key "Key value"
        date expires_at "Expiration date"
        bool enabled "Key status"
        date created_at "Creation date"
        date updated_at "Last update date"
    }

    project ||--o{ environment: "has"
    project ||--o{ project_scopes: "contains"
    service_account ||--o{ project_access: "is used in"
    service_account ||--|| service_account_keys: "has"
    environment ||--o{ project_access: "is used in"
    project_access ||--o{ access_token: "generates"
    project_access }o--o{ project_scopes: "uses"
    service_account_keys }o--|| ALGORITHM: "uses"
    access_token }o--o{ ALGORITHM: "uses"